--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -2,7 +2,7 @@ name: Update Dashboard
 
 on:
   schedule:
-    - cron: "15 13 * * 1-5"   # Mon-Fri 13:15 UTC (adjust later)
+    - cron: "15 13 * * 1-5"   # Mon-Fri 13:15 UTC
   workflow_dispatch: {}
 
 permissions:
@@ -15,6 +15,9 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -37,12 +40,12 @@ jobs:
         run: |
           python -m slidemodel.cli export-dashboard
 
-      - name: Commit updated dashboard.json
+      - name: Commit dashboard updates (docs/)
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add docs/dashboard.json
+          git add docs/
 
           if git diff --cached --quiet; then
             echo "No dashboard changes to commit."
