--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -2,7 +2,7 @@ name: Update Dashboard
 
 on:
   schedule:
-    - cron: "15 13 * * 1-5"   # Mon-Fri 13:15 UTC
+    - cron: "15 13 * * 1-5" # Mon-Fri 13:15 UTC
   workflow_dispatch: {}
 
 permissions:
@@ -25,12 +25,16 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
+        env:
+          PIP_NO_INPUT: "1"
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip wheel setuptools
+          pip install --no-input -r requirements.txt
           pip install -e .
 
       - name: Init DB (if needed)
+        env:
+          SEC_USER_AGENT: ${{ secrets.SEC_USER_AGENT }}
         run: |
           python -m slidemodel.cli init-db
 
@@ -42,6 +46,8 @@ jobs:
           python -m slidemodel.cli evaluate
 
       - name: Export dashboard
+        env:
+          SEC_USER_AGENT: ${{ secrets.SEC_USER_AGENT }}
         run: |
           python -m slidemodel.cli export-dashboard
 
