--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -1,16 +1,15 @@
-name: Nightly Dashboard
+name: Build Dashboard
 
 on:
   workflow_dispatch:
   schedule:
-    # 02:30 UTC daily (pick whatever you want)
-    - cron: "30 2 * * *"
+    - cron: "15 2 * * *"  # 02:15 UTC daily
 
 permissions:
   contents: write
 
 jobs:
-  build-dashboard:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,33 +21,25 @@ jobs:
         with:
           python-version: "3.9"
 
-      - name: Install dependencies
+      - name: Install
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -e .
 
-      - name: Run model + export dashboard
+      - name: Build dashboard (db + evaluate + export)
         env:
-          SEC_USER_AGENT: ${{ secrets.SEC_USER_AGENT }}
+          SEC_USER_AGENT: Russell Barnett russellbarnett.co@gmail.com
           WATCH_N: "20"
         run: |
           python -m slidemodel.cli init-db
           python -m slidemodel.cli evaluate
           python -m slidemodel.cli export-dashboard
 
-      - name: Commit updated dashboard.json
+      - name: Commit updated docs
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-
           git add docs/dashboard.json
-
-          # Only commit if something changed
-          if git diff --cached --quiet; then
-            echo "No dashboard changes to commit."
-            exit 0
-          fi
-
-          git commit -m "Nightly dashboard update"
+          git commit -m "Nightly dashboard update" || echo "No changes to commit"
           git push
